--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,10 @@
-/scans
-/pdfs
-/raw
-/jpeg
-/links
 *.tiff
 *.pdf
 *.jpeg
 *.jpg
+*.aux
+*.log
+
 /tex_template/links
-/tex_template/template.aux
-/tex_template/template.log
-/template.log
-/template.aux
-/missfont.log
+/photo-inbox
+.SyncArchive
